k8s/db-dpl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: database
spec:
  replicas: 1
  selector:
    matchLabels:
      app: database
  template:
    metadata:
      labels:
        app: database
    spec:
      containers:
      - name: database
        image: postgres:latest
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 5432
        volumeMounts:  # This should be within the container spec
        - mountPath: /var/lib/postgresql/data  # Path inside the container
          name: db-storage  # Name of the volume to mount
      volumes:  # This should be at the same level as containers
      - name: db-storage
        persistentVolumeClaim:
          claimName: db-pvc  # Reference to your PVC
