k8s/client-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: client-service
spec:
  type: LoadBalancer
  selector:
    app: client
  ports:
  - port: 80
    targetPort: 80
