k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: restaurant-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:     
      - path: /api           # Match all requests to /api
        pathType: Prefix
        backend:
          service:
            name: backend-service     # Your backend service name
            port:
              number: 80   
      - path: /              # Match all requests to the root path
        pathType: Prefix
        backend:
          service:
            name: client-service   # Your frontend service name
            port:
              number: 80
